--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -11,32 +11,43 @@ body {
   background-image: url("../graphics/background.jpg"); }
 
 h1 {
-  font-size: 4rem;
+  font-size: 2rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   z-index: 100;
-  position: absolute;
-  top: -2rem;
-  left: -4rem;
   padding: 0;
-  margin: 0;
-  -ms-transform: rotate(-2deg);
-  /* IE 9 */
-  -webkit-transform: rotate(-2deg);
-  /* Chrome, Safari, Opera */
-  transform: rotate(-2deg); }
+  margin: 0 auto; }
+  @media screen and (min-width: 600px) {
+    h1 {
+      font-size: 3rem;
+      left: 1rem;
+      -ms-transform: rotate(-2deg);
+      /* IE 9 */
+      -webkit-transform: rotate(-2deg);
+      /* Chrome, Safari, Opera */
+      transform: rotate(-2deg);
+      position: absolute;
+      top: -2rem;
+      left: 1rem; } }
+  @media screen and (min-width: 800px) {
+    h1 {
+      font-size: 4rem;
+      color: -4rem; } }
 
 article {
-  padding: 1rem 1rem 2rem 2rem;
+  padding: 1.5rem 1rem 2rem 2rem;
   background-color: white;
   margin-bottom: 2rem;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  -ms-transform: rotate(-1deg);
-  /* IE 9 */
-  -webkit-transform: rotate(-1deg);
-  /* Chrome, Safari, Opera */
-  transform: rotate(-1deg); }
+  border: 1px solid rgba(0, 0, 0, 0.2); }
+  @media screen and (min-width: 600px) {
+    article {
+      -ms-transform: rotate(-1deg);
+      /* IE 9 */
+      -webkit-transform: rotate(-1deg);
+      /* Chrome, Safari, Opera */
+      transform: rotate(-1deg); } }
 
 p {
   padding: 0;
@@ -47,19 +58,25 @@ p {
   max-width: 1000px;
   margin: 0 auto;
   width: 100%;
-  margin-top: 6rem; }
+  margin-top: 2.5rem;
+  text-align: center; }
+  @media screen and (min-width: 600px) {
+    .page-content {
+      text-align: left;
+      margin-top: 6rem; } }
 
 .upcoming {
   position: relative; }
 
 .article-container {
-  float: right;
   text-align: left;
-  clear: both;
-  overflow: auto;
-  margin-top: 5rem;
   width: 24rem;
-  overflow: hidden; }
+  margin: 4rem auto 0 auto; }
+  @media screen and (min-width: 600px) {
+    .article-container {
+      float: right;
+      clear: both;
+      margin-top: 5rem; } }
 
 .company {
   font-weight: 700;
@@ -92,7 +109,11 @@ p {
   left: 0;
   width: 100%;
   height: 20rem;
-  pointer-events: none; }
+  pointer-events: none;
+  opacity: 0; }
+  @media screen and (min-width: 600px) {
+    .drawn-line {
+      opacity: 1; } }
 
 .point_b {
   position: absolute;
@@ -107,9 +128,18 @@ p {
   background-color: #eee;
   width: 460px;
   height: 460px;
-  position: absolute;
-  top: 3rem;
-  z-index: -1; }
+  margin: 0 auto;
+  position: relative;
+  top: 1rem;
+  z-index: 0;
+  text-align: left;
+  display: none; }
+  @media screen and (min-width: 600px) {
+    #map {
+      position: absolute;
+      display: block;
+      z-index: -1;
+      top: 3rem; } }
 
 .point_a {
   position: absolute;
@@ -125,14 +155,11 @@ p {
 /* FFF7B3 */
 button {
   background: #FFE89A;
-  border-radius: 6px;
-  border: 0;
-  box-shadow: 0 4px 0 #CEBC7E;
-  color: #BBA756;
+  border: 1px solid #CEBC7E;
+  color: #918245;
   font: inherit;
   margin-top: 1rem;
-  font-size: 0.9rem;
-  font-weight: 700;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
   line-height: normal;
   overflow: visible;
   padding: 0.65rem 1.5rem 0.5rem;
@@ -148,9 +175,7 @@ button {
   button:hover {
     background-color: #88E1DA;
     color: #2F8B8D;
-    margin-top: Calc(1rem + 2px);
-    margin-bottom: 0;
-    box-shadow: none; }
+    border-color: #2F8B8D; }
   button:focus {
     outline: none; }
 
@@ -158,8 +183,12 @@ button {
   position: absolute;
   pointer-events: none;
   left: -20px;
-  top: -4px; }
+  top: -4px;
+  display: none; }
   .frying-pan img {
     height: 530px; }
+  @media screen and (min-width: 600px) {
+    .frying-pan {
+      display: block; } }
 
 /*# sourceMappingURL=main.css.map */
